fix(UI&Backend performance): 1. UI Report summary table: - remove dropdawn with Mustard - sort table by loop column 2. UI test planner: - loop count and aggregation should be on the same level - Fix Git URL 3. Backend performance report: - Fix legend for engine health - Analytics should be disable when test in progress - Logs should be with the same font - Cart header should be with same font - convert start and end time to human readable 4. Backend and UI results table (report list): - Font for name column - Link for name column

--- a/static/assets/style/css/main.css
+++ b/static/assets/style/css/main.css
@@ -1499,6 +1499,9 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 .table-hover tbody tr:hover {
   background-color: var(--gray100);
 }
+.table-hover tbody tr:hover a {
+  color: #2F7DF1;
+}
 
 .thead-light th {
   background-color: var(--background) !important;
@@ -1554,8 +1557,8 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 }
 
 .card-body .table td {
-  font-size: 12px;
-  font-weight: 300px;
+  font-size: 14px;
+  font-weight: 400;
   padding-top: 8px;
   padding-bottom: 8px;
 }
@@ -1669,6 +1672,10 @@ td.disabled input {
 .table tbody tr td {
   color: var(--gray800);
   font-size: 14px;
+}
+.table tbody tr td a:hover {
+  color: #2F7DF1;
+  text-decoration: none;
 }
 
 .bs-checkbox input[type=checkbox] {
@@ -2176,7 +2183,7 @@ tr.highlight td:last-child div {
 }
 
 .btn-secondary.hover,
-.btn-secondary:hover {
+.btn-secondary:not(:disabled):hover {
   color: var(--basic-hover);
   background-color: var(--white) !important;
   border: 1px solid var(--basic60);
@@ -3144,23 +3151,32 @@ input[type=range]::-moz-range-thumb {
 
 .input-tabs {
   position: absolute;
-  bottom: 3px;
-  left: 3px;
+  bottom: 2px;
+  left: 2px;
 }
 .input-tabs a {
+  border: solid 1px var(--gray300);
   display: block;
   color: #757f99;
   font-size: 12px;
   line-height: 24px;
   padding: 4px 16px 3px 16px;
-  border: none;
   background: white;
-  border-radius: 2px;
   text-decoration: none;
+}
+.input-tabs .nav-item:first-child a {
+  margin-right: -1px;
+}
+.input-tabs .nav-item:first-child a {
+  border-radius: 4px 0 0 4px;
+}
+.input-tabs .nav-item:last-child a {
+  border-radius: 0 4px 4px 0;
 }
 .input-tabs a.active {
   color: var(--purple);
   background: var(--tabs-btns-icns);
+  border: solid 1px var(--purple-outline);
 }
 
 .custom-input__tabs {
@@ -4073,8 +4089,27 @@ p {
   background-color: #757f99;
 }
 
+.btn:hover .icon__16x16, .btn:hover .icon__18x18,
+li:hover .icon__16x16, li:hover .icon__18x18 {
+  background-color: var(--basic);
+}
+
+.btn-icon__purple .icon__16x16, .btn-icon__purple .icon__18x18 {
+  background-color: var(--basic);
+}
+
+.btn-icon__purple:disabled .icon__16x16, .btn-icon__purple:disabled .icon__18x18 {
+  background-color: #cad1d7;
+}
+
 .icon-filter {
   -webkit-mask-image: url("../../../assets/ico/icon-filter__18x18.svg");
+}
+
+.icon-sort {
+  -webkit-mask-image: url("../../../assets/ico/icon-sort.svg");
+  -webkit-mask-repeat: no-repeat;
+  height: 9px;
 }
 
 .icon-refresh {
@@ -4327,6 +4362,10 @@ p {
 
 .font-uppercase {
   text-transform: uppercase;
+}
+
+.text-disabled {
+  color: #cad1d7 !important;
 }
 
 .custom-nav {
