--- a/static/assets/style/scss/_tables.scss
+++ b/static/assets/style/scss/_tables.scss
@@ -14,6 +14,9 @@
 }
 .table-hover tbody tr:hover {
   background-color: var(--gray100);
+  a {
+    color: #2F7DF1;
+  }
 }
 .thead-light th {
   background-color: var(--background) !important;
@@ -71,8 +74,8 @@
 }
 
 .card-body .table td {
-  font-size: 12px;
-  font-weight: 300px;
+  font-size: 14px;
+  font-weight: 400;
   padding-top: 8px;
   padding-bottom: 8px;
 }
@@ -188,6 +191,10 @@ td.disabled input {
       td {
         color: var(--gray800);
         font-size: 14px;
+        a:hover {
+          color: #2F7DF1;
+          text-decoration: none;
+        }
       }
     }
   }
