--- a/static/assets/style/scss/_typography.scss
+++ b/static/assets/style/scss/_typography.scss
@@ -58,3 +58,7 @@
 .font-uppercase {
   text-transform: uppercase;
 }
+
+.text-disabled {
+  color: $gray400 !important;
+}
